devflowcd/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devflow
  labels:
    app.kubernetes.io/name: devflow
