devflowcd/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devflow-service
  namespace: devflow
  labels:
    app.kubernetes.io/name: devflow
    app.kubernetes.io/component: web
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: devflow
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      nodePort: 30007
      targetPort: http
      protocol: TCP
